# CiteForge

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: monthly-refresh.yml  monthly-run.yml  tests.yml
audit/: 01-invariant-catalog.md  02-design.md  03-bibentry-design.md
citeforge/: api_configs.py  api_generics.py  bibtex_build.py  bibtex_utils.py  cache.py  canonicalize.py  config.py  doi_utils.py  exceptions.py  fsscan.py  http_utils.py  id_utils.py  io_utils.py  log_utils.py  merge_utils.py  models.py  publication_parser.py  text_utils.py  textnorm.py  venue.py
citeforge/clients/: helpers.py  search_apis.py  serpapi_scholar.py  serply_scholar.py  utility_apis.py
citeforge/pipeline/: article.py  postrun.py  scheduler.py
data/: a2i2.csv  full.csv  input.csv  input_full.csv  input_spadon.csv
output/: badges.json  baseline.json  summary.csv
output/Abidi (fzr2PUYAAAAJ)/: Abidi2019-IntelligentHealth.bib  Abidi2023-MultiviewClustering.bib  Abidi2024-CharacterizingCluster.bib  (+59 more)
src/: api_configs.py  api_generics.py  bibtex_build.py  bibtex_utils.py  browser.py  cache.py  canonicalize.py  config.py  doi_utils.py  entry.py  exceptions.py  http_utils.py  id_utils.py  io_utils.py  log_utils.py  merge_utils.py  models.py  publication_parser.py  text_utils.py  textnorm.py  venue.py
tests/: _transform_regression.py  conftest.py  corpus.py  factories.py  fakes.py  fixtures.py  test_apis.py  test_bibtex_build.py  test_bibtex_serialize.py  test_cache.py  test_canonicalize.py  test_config.py  test_core.py  test_data.py  test_decision_reinforcement.py  test_deduplication.py  test_entry.py  test_finalize_run.py  test_fsscan.py  test_http_utils.py  test_id_utils.py  test_integration.py  test_io_csv.py  test_pipeline.py  test_pipeline_e2e.py  test_publication_parser.py  test_regression.py  test_save_entry.py  test_scholar.py  test_scholar_browser.py  test_scholarly_scholar.py  test_text_utils.py  test_textnorm.py  test_venue.py
(+3107 files in other folders)
