[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citeforge"
version = "1.0.0"
description = "CiteForge: trust-based BibTeX metadata aggregation from scholarly APIs"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32.0",
    "rapidfuzz>=3.0.0",
    "unidecode>=1.3.0",
    "python-slugify>=8.0.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "types-requests>=2.32.0",
]

[tool.setuptools]
packages = ["citeforge", "citeforge.clients", "citeforge.pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (Python upgrade suggestions)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101",   # assert in tests (pytest requirement)
    "S311",   # random for non-crypto purposes
    "S310",   # urlopen for known-safe academic API URLs
    "S314",   # xml.etree.ElementTree for trusted API XML (arXiv, DBLP)
    "SIM117", # nested with for test patching
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",   # imports after conftest
    "S106",   # hardcoded test credentials
    "S105",   # hardcoded password strings in test data
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
